--- a/style.css
+++ b/style.css
@@ -1,3 +1,162 @@
-h1{
-    color: blueviolet;
+header {
+    display: block;
+    width: 3000px;
+    height: 808px;
+    left: 0px;
+    top: 0px;
+    background-image: url('/images/banner/banner3.png');
+    background-repeat: no-repeat;
+    /* margin-left: 200px; */
+    display: flex;
+
+}
+
+.title {
+    font-weight: 700;
+    font-size: 65px;
+    color: #FFFFFF;
+    ;
+
+    margin-top: 216px;
+    margin-left: 1000px;
+}
+
+.title-discription {
+    margin-left: 1000px;
+    font-weight: 400;
+    font-size: 16px;
+    color: #FFFFFF;
+}
+
+.contact {
+    margin-left: 1200px;
+    font-weight: 600;
+    font-size: 20px;
+    color: #005FAC;
+    padding: 21px;
+}
+
+.main {
+    display: flex;
+    gap: 300px;
+    ;
+}
+
+.main-right {
+    background-image: url('/images/person.png');
+    background-repeat: repeat-y;
+    margin-top: 183px;
+}
+
+.main-lift {
+    margin-top: 420px;
+    font-weight: 700;
+    font-size: 40px;
+    color: #151414;
+
+}
+
+.main-discrip {
+    font-weight: 400;
+    font-size: 16px;
+    color: #444343;
+}
+
+.main-conditon {
+    list-style-type: none;
+    color: #444343;
+}
+
+.Plans {
+    margin-top: 130px;
+    margin-left: 711px;
+    font-weight: 700;
+    font-size: 40px;
+    color: #151414;
+}
+
+.want {
+    display: flex;
+    margin-left: 350px;
+    gap: 200px;
+    ;
+}
+
+.topic {
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 35px;
+    text-align: center;
+    color: #151414;
+}
+
+.banner {
+    margin-top: 124px;
+    background-image: url('/images/watch.png');
+    background-repeat: no-repeat;
+    display: block;
+    width: 2000px;
+    height: 500px;
+    left: 0px;
+
+}
+
+.banner-title {
+    font-size: 40px;
+    color: #611818;
+
+}
+
+.call-now {
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin-left: 200px;
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+    color: #F15B22;
+}
+
+.footer {
+    display: flex;
+    background: #151414;
+    gap: 200px;
+}
+
+.footer-right-title {
+    margin-left: 30px;
+    font-weight: 700;
+    font-size: 45px;
+    color: #F8F8F8;
+}
+
+.footer-right-dispctiop {
+    margin-left: 30px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 26px;
+    color: #FFFFFF;
+}
+
+.icon-socal {
+    gap: 500px;
+}
+
+.footer-left-titile {
+    margin-top: 75px;
+    margin-bottom: 50px;
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 29px;
+    color: #FFFFFF;
+}
+
+.subcrip {
+    margin-top: 25px;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 24px;
+    color: #F15B22;
+
+
 }
