--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ header {
     height: 808px;
     left: 0px;
     top: 0px;
-    background-image: url('/images/banner/banner3.png');
+    background-image: url('./images/banner/banner3.png');
     background-repeat: no-repeat;
     /* margin-left: 200px; */
     display: flex;
