--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ header {
 
 .banner {
     margin-top: 124px;
-    background-image: url('/images/watch.png');
+    background-image: url('./images/watch.png');
     background-repeat: no-repeat;
     display: block;
     width: 2000px;
