--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 header {
+    margin-left: 500px;
     display: block;
     width: 3000px;
     height: 808px;
@@ -37,6 +38,7 @@ header {
 }
 
 .main {
+    margin-left: 500px;
     display: flex;
     gap: 300px;
     ;
@@ -91,6 +93,7 @@ header {
 }
 
 .banner {
+    margin-left: 500px;
     margin-top: 124px;
     background-image: url('./images/watch.png');
     background-repeat: no-repeat;
@@ -102,6 +105,8 @@ header {
 }
 
 .banner-title {
+    margin-left: 100px;
+    margin-top: 100px;
     font-size: 40px;
     color: #611818;
 
